[gd_scene load_steps=31 format=3 uid="uid://shlmshugkkpw"]

[ext_resource type="Script" path="res://Upgrades/MP3.gd" id="1_f77uc"]
[ext_resource type="Texture2D" uid="uid://de6bemcguxqei" path="res://Graphics/MP3.png" id="2_wapow"]
[ext_resource type="Texture2D" uid="uid://brk7p56r2tra" path="res://Graphics/ui_a_press.png" id="3_ayae3"]
[ext_resource type="Texture2D" uid="uid://cyx2wh60x8dm4" path="res://Graphics/ui_enter_press.png" id="4_gn2jy"]
[ext_resource type="PackedScene" uid="uid://80cq1ehkff6b" path="res://InteractableObjects/QuickAudioPlayer.tscn" id="5_0gxn7"]
[ext_resource type="AudioStream" uid="uid://p4gb0t64qqcn" path="res://SFX/BasicItem_Pickup.mp3" id="6_fnt6i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3goda"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bqv77"]
atlas = ExtResource("2_wapow")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhr7i"]
atlas = ExtResource("2_wapow")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r16gh"]
atlas = ExtResource("2_wapow")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5fup"]
atlas = ExtResource("2_wapow")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7e0t"]
atlas = ExtResource("2_wapow")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24o38"]
atlas = ExtResource("2_wapow")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnsiq"]
atlas = ExtResource("2_wapow")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpt0b"]
atlas = ExtResource("2_wapow")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0dhd"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_bqv77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhr7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r16gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5fup")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_j7e0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24o38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnsiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpt0b")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_hlcvd"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nldcg"]
gradient = SubResource("Gradient_hlcvd")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.85, 0.85)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt8a3"]
atlas = ExtResource("3_ayae3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4xyd"]
atlas = ExtResource("3_ayae3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1gah"]
atlas = ExtResource("3_ayae3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62h5f"]
atlas = ExtResource("3_ayae3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlw44"]
atlas = ExtResource("3_ayae3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xuvuo"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_tt8a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4xyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1gah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62h5f")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_hlw44")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pxmdd"]
atlas = ExtResource("4_gn2jy")
region = Rect2(0, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b23qa"]
atlas = ExtResource("4_gn2jy")
region = Rect2(36, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lberm"]
atlas = ExtResource("4_gn2jy")
region = Rect2(72, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfqm3"]
atlas = ExtResource("4_gn2jy")
region = Rect2(108, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re48v"]
atlas = ExtResource("4_gn2jy")
region = Rect2(144, 0, 36, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_11tjm"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_pxmdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b23qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lberm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfqm3")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_re48v")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="MP3" type="Area2D"]
script = ExtResource("1_f77uc")
metadata/DIALOGUE = ["You  found  a  file  for  your  phone!", "If  only  you  knew  how  to  install it..."]
metadata/MP3Name = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3goda")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_q0dhd")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.532349

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.75
texture = SubResource("GradientTexture2D_nldcg")

[node name="UI_Controller" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 6
texture_filter = 1
position = Vector2(0, -49)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_xuvuo")
animation = &"idle"
autoplay = "idle"

[node name="UI_Keyboard" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 6
texture_filter = 1
position = Vector2(0, -49)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_11tjm")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.0658358

[node name="QuickAudioPlayer" parent="." instance=ExtResource("5_0gxn7")]
unique_name_in_owner = true

[node name="SFX" type="AudioStreamPlayer2D" parent="QuickAudioPlayer"]
stream = ExtResource("6_fnt6i")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
